--- a/Basic.html
+++ b/Basic.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>own ToDoList</title>
+    <link rel="stylesheet" href="Basic.css">
 </head>
 <body>
-<div>
-    <h2>This is my first own JS project</h2>
+<div id="myDIV" class="header">
+    <h2>My To Do List</h2>
     <input type="text" id="myInput" placeholder="Title...">
     <span onclick="newElement()" class="addBtn">Add</span>
 </div>
@@ -19,6 +20,7 @@
     <li>Buy egg</li>
     <li>stay office</li>
 </ul>
+<script src="Toy.js"></script>
 
 
 
